# axis-axis2-c-sandesha

./: INSTALL  Makefile.am  NEWS  NOTICE  README  autogen.sh  bindist.sh  build.sh  configure.ac  project.xml
config/: axis2.xml  clean_mysql.sh  create_mysql.sh  create_user.sh  init_mysql.sh  module.xml  mysql_schema.sh  mysql_schema_client_clean.sh  mysql_schema_client_create.sh  mysql_schema_svr_clean.sh  mysql_schema_svr_create.sh  sandesha2_schema.bat  sandesha2_schema.sh  sqlite_schema.bat  sqlite_schema.sh
include/: sandesha2_accept.h  sandesha2_ack_final.h  sandesha2_ack_mgr.h  sandesha2_ack_msg_processor.h  sandesha2_ack_none.h  sandesha2_ack_range.h  sandesha2_ack_req_msg_processor.h  sandesha2_ack_requested.h  sandesha2_acks_to.h  sandesha2_address.h  sandesha2_app_msg_processor.h  sandesha2_client.h  sandesha2_client_constants.h  sandesha2_close_seq.h  sandesha2_close_seq_msg_processor.h  sandesha2_close_seq_res.h  sandesha2_constants.h  sandesha2_create_seq.h  sandesha2_create_seq_bean.h  sandesha2_create_seq_mgr.h  sandesha2_create_seq_msg_processor.h  sandesha2_create_seq_res.h  sandesha2_create_seq_res_msg_processor.h  sandesha2_error.h  sandesha2_expires.h  sandesha2_fault_code.h  sandesha2_fault_data.h  sandesha2_fault_mgr.h  sandesha2_identifier.h  sandesha2_in_memory_create_seq_mgr.h  sandesha2_in_memory_invoker_mgr.h  sandesha2_in_memory_next_msg_mgr.h  sandesha2_in_memory_sender_mgr.h  sandesha2_in_memory_seq_property_mgr.h  sandesha2_in_memory_transaction.h  sandesha2_in_order_invoker.h  sandesha2_inmemory_create_seq_mgr.h  sandesha2_inmemory_invoker_mgr.h  sandesha2_inmemory_next_msg_mgr.h  sandesha2_inmemory_sender_mgr.h  (+60 more)
samples/: Makefile.am  build.sh  configure.ac
samples/client/rm_mtom/: Makefile.am  mtom_client.c
samples/rm_amqp/rm_mtom_1_0/: Makefile.am  rm_mtom_1_0.c
samples/rm_amqp/rm_ping_1_0/: Makefile.am  rm_ping_1_0.c
samples/rm_echo/: Makefile.am  rm_echo.c  rm_echo_client.c
samples/rm_echo_single_1_1/: Makefile.am  echo_util.c  rm_echo_single_1_1.c
samples/rm_mtom/: Makefile.am  mtom_util.c  rm_mtom_client.c
samples/rm_mtom_1_0/: Makefile.am  mtom_util.c  mtom_util.h  rm_mtom_1_0.c  rm_mtom_client.c
samples/rm_ping_1_0/: Makefile.am  policy.xml  rm_ping_1_0.c  rm_ping_client.c
samples/rm_ping_1_1/: Makefile.am  rm_ping_1_1.c  rm_ping_client.c
samples/rm_report/: Makefile.am  report.c  report_util.c
samples/server/rm_mtom/: Makefile.am  services.xml
src/: Makefile.am  fault_manager.c  mod_sandesha2.c  msg_ctx.c  msg_validator.c
src/client/: Makefile.am  client.c  report.c  sandesha2_client_constants.h  sandesha2_client_constatns.h  sandesha_client.c  sequence_report.c
src/core/: Makefile.am  mod_sandesha2.c  msg_ctx.c  msg_validator.c  sandesha2_msg_ctx.c
src/handlers/: Makefile.am  sandesha2_global_in_handler.c  sandesha2_in_handler.c  sandesha2_out_handler.c
src/msgprocessors/: Makefile.am  ack_msg_processor.c  ack_req_msg_processor.c  app_msg_processor.c  close_seq_msg_processor.c  close_seq_res_msg_processor.c  create_seq_msg_processor.c  create_seq_res_msg_processor.c  make_connection_msg_processor.c  msg_processor_creator.c  terminate_seq_msg_processor.c  terminate_seq_res_msg_processor.c
src/polling/: Makefile.am  polling_mgr.c
src/storage/: Makefile.am  create_seq_mgr.c  invoker_mgr.c  next_msg_mgr.c  sender_mgr.c  seq_property_mgr.c  storage_mgr.c  transaction.c
src/storage/beans/: Makefile.am  create_seq_bean.c  invoker_bean.c  next_msg_bean.c  rm_bean.c  sender_bean.c  seq_property_bean.c  sequence_property_bean.c
src/storage/common/: Makefile.am  sender_mgr.c  storage_mgr.c
src/storage/inmemory/: Makefile.am  create_seq_mgr.c  in_memory_create_seq_mgr.c  in_memory_invoker_mgr.c  in_memory_next_msg_mgr.c  in_memory_sender_mgr.c  in_memory_seq_property_mgr.c  in_memory_storage_manager.c  in_memory_transaction.c  inmemory_bean_mgr.c  inmemory_create_seq_mgr.c  inmemory_invoker_mgr.c  inmemory_next_msg_mgr.c  inmemory_sender_mgr.c  inmemory_seq_property_mgr.c  inmemory_storage_mgr.c  inmemory_transaction.c  invoker_mgr.c  invoker_next_msg_mgr.c  next_msg_mgr.c  sandesha2_inmemory_bean_mgr.h  sender_mgr.c  seq_property_mgr.c  storage_mgr.c  transaction.c
src/storage/mysql/: Makefile.am  permanent_bean_mgr.c  permanent_create_seq_mgr.c  permanent_invoker_mgr.c  permanent_next_msg_mgr.c  permanent_sender_mgr.c  permanent_seq_property_mgr.c  permanent_storage_mgr.c  permanent_transaction.c  sandesha2_permanent_bean_mgr.h
src/storage/permanent/: Makefile.am  msg_store_bean.c  permanent_bean_mgr.c  permanent_create_seq_mgr.c  permanent_invoker_mgr.c  permanent_next_msg_mgr.c  permanent_sender_mgr.c  permanent_seq_property_mgr.c  permanent_storage_mgr.c  permanent_transaction.c  sandesha2_permanent_bean_mgr.h
src/storage/permanent_mysql/: Makefile.am  permanent_transaction.c
src/storage/sqlite/: Makefile.am  msg_store_bean.c  permanent_bean_mgr.c  permanent_create_seq_mgr.c  permanent_invoker_mgr.c  permanent_next_msg_mgr.c  permanent_sender_mgr.c  permanent_seq_property_mgr.c  permanent_storage_mgr.c  permanent_transaction.c  sandesha2_permanent_bean_mgr.h  sandesha2_permanent_next_msg_mgr.h  sandesha2_permanent_transaction.h  sqlite3.c  svn-commit.2.tmp  svn-commit.3.tmp  svn-commit.tmp
src/transport/: Makefile.am  sandesha2_transport_sender.c
src/util/: Makefile.am  ack_mgr.c  error.c  fault_data.c  fault_mgr.c  msg_creater.c  msg_creator.c  msg_init.c  msg_retrans_adjuster.c  property_bean.c  property_mgr.c  sandesha2_utils.c  seq_mgr.c  spec_specific_consts.c  terminate_mgr.c  utils.c
src/workers/: Makefile.am  in_order_invoker.c  sender.c  sender_worker.c
src/wsrm/: Makefile.am  accept.c  ack_final.c  ack_none.c  ack_range.c  ack_requested.c  acks_to.c  address.c  close_seq.c  close_seq_res.c  create_seq.c  create_seq_res.c  endpoint.c  expires.c  fault_code.c  identifier.c  iom_rm_element.c  iom_rm_part.c  last_msg.c  make_connection.c  msg_number.c  msg_pending.c  nack.c  rm_elements.c  seq_ack.c  seq_fault.c  seq_offer.c  sequence.c  terminate_seq.c  terminate_seq_res.c
(+133 files in other folders)
