TESTS =
noinst_LTLIBRARIES = libsandesha2_msgprocessors.la

libsandesha2_msgprocessors_la_SOURCES = app_msg_processor.c\
                                        create_seq_msg_processor.c\
                                        ack_msg_processor.c

INCLUDES = -I$(top_builddir)/include \
           @AXIS2INC@
