noinst_LTLIBRARIES = libsandesha_util.la

libsandesha_util_la_SOURCES = \
							error.c \
							utils.c \
							spec_specific_consts.c\
                            fault_data.c\
                            fault_mgr.c\
                            ack_mgr.c

INCLUDES = -I$(top_builddir)/include \
			-I$(top_builddir)/include/sandesha2 \
			@UTILINC@
