noinst_LTLIBRARIES = libsandesha2_inmemory.la

libsandesha2_inmemory_la_SOURCES = \
								in_memory_create_seq_mgr.c \
								in_memory_invoker_mgr.c \
								in_memory_sender_mgr.c \
								in_memory_next_msg_mgr.c \
								in_memory_seq_property_mgr.c \
								in_memory_transaction.c

INCLUDES = -I$(top_builddir)/include \
			-I$(top_builddir)/include/sandesha2 \
			@UTILINC@
