noinst_LTLIBRARIES = libsandesha2_inmemory.la

libsandesha2_inmemory_la_SOURCES = \
								create_seq_mgr.c \
								invoker_mgr.c \
								sender_mgr.c \
								next_msg_mgr.c \
								seq_property_mgr.c \
								transaction.c \
								storage_mgr.c

INCLUDES = -I$(top_builddir)/include \
			-I$(top_builddir)/include/sandesha2 \
			@AXIOMINC@ \
			@UTILINC@
