noinst_LTLIBRARIES = libsandesha2_inmemory.la

libsandesha2_inmemory_la_SOURCES = \
								inmemory_create_seq_mgr.c \
								inmemory_invoker_mgr.c \
								inmemory_sender_mgr.c \
								inmemory_next_msg_mgr.c \
								inmemory_seq_property_mgr.c \
								inmemory_transaction.c \
								inmemory_storage_mgr.c

INCLUDES = -I$(top_builddir)/include \
			-I$(top_builddir)/include/sandesha2 \
			@AXIS2INC@
